infra/K8s/auction-svc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-svc
spec:
  selector:
    matchLabels:
      app: auction-svc
  template:
    metadata:
      labels:
        app: auction-svc
    spec:
      containers:
      - name: auction-svc
        image: maju84/auction-svc
        imagePullPolicy: Never    # never from remote, always from local (node!)
---

apiVersion: v1
kind: Service
metadata:
  name: auction-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: auction-svc
  ports:
  - port: 80
    targetPort: 80
    name: web
  - port: 7777
    targetPort: 7777
    name: grpc
