infra/K8s/gateway-svc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc
spec:
  selector:
    matchLabels:
      app: gateway-svc
  template:
    metadata:
      labels:
        app: gateway-svc
    spec:
      containers:
      - name: gateway-svc
        image: maju84/gateway-svc
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
  ports:
  - port: 80
    targetPort: 8080
