infra/K8s/mongodb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts: 
        - mountPath: /var/data/mongo
          name: mongodb-storage
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-clusterip
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-lb
spec:
  type: LoadBalancer
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
