infra/K8s/notification-svc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-svc
spec:
  selector:
    matchLabels:
      app: notification-svc
  template:
    metadata:
      labels:
        app: notification-svc
    spec:
      containers:
      - name: notification-svc
        image: maju84/notification-svc
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: notification-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: notification-svc
  ports:
  - port: 80
    targetPort: 80
