infra/K8s/postgres-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/data/postgres
          name: postgres-storage  # must match the name of the volume
      volumes:
      - name: postgres-storage  # must match the name of the volumeMount
        persistentVolumeClaim:
          claimName: postgres-claim # must match the name of the PVC

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
spec:
  type: LoadBalancer
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
