infra/K8s/rabbitmq-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 15672
          name: rbmq-mgmt-port  # rabbitmq management port
        - containerPort: 5672
          name: rbmq-msg-port   # rabbitmq messages port
        volumeMounts: 
        - mountPath: /var/data/rabbitmq
          name: rabbitmq-storage
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-claim

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 5672          # rabbitmq messages port
    targetPort: 5672

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-lb
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
  - port: 15672         # rabbitmq management port
    targetPort: 15672
