infra/K8s/search-svc-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-svc
spec:
  selector:
    matchLabels:
      app: search-svc
  template:
    metadata:
      labels:
        app: search-svc
    spec:
      containers:
      - name: search-svc
        image: maju84/search-svc
        imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: search-svc-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-svc
  ports:
  - port: 80
    targetPort: 8080
