infra/K8s/wheeldealz-fe-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wheeldealz-fe
spec:
  selector:
    matchLabels:
      app: wheeldealz-fe
  template:
    metadata:
      labels:
        app: wheeldealz-fe
    spec:
      containers:
      - name: wheeldealz-fe
        image: maju84/wheeldealz-fe
        imagePullPolicy: Never
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: wheeldealz-fe-clusterip
spec:
  type: ClusterIP
  selector:
    app: wheeldealz-fe
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: wheeldealz-fe-lb
spec:
  type: LoadBalancer
  selector:
    app: wheeldealz-fe
  ports:
  - port: 3000
    targetPort: 3000
