infra/K8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app.wheeldealz.tech
    - api.wheeldealz.tech
    secretName: wheeldealz-app-tls
  rules:
  - host: app.wheeldealz.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wheeldealz-fe-clusterip
            port: 
              number: 3000
  - host: api.wheeldealz.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-svc-clusterip
            port: 
              number: 80
